Add Facebook link to footer on all pages

--- a/services/towing.html
+++ b/services/towing.html
@@ -97,6 +97,8 @@
                     <h3>Meckley's</h3>
                     <p>11308 Hwy S62 N<br>Melbourne, IA 50162</p>
                     <p><a href="tel:641-227-3881" class="text-white"><i class="fas fa-phone"></i> 641-227-3881</a></p>
+                    <p><a href="https://facebook.com" target="_blank" class="text-white"><i class="fab fa-facebook"></i>
+                            Follow us on Facebook</a></p>
                 </div>
                 <div>
                     <h3>Hours</h3>
