--- a/services/scrap.html
+++ b/services/scrap.html
@@ -94,7 +94,7 @@
                     <h3>Meckley's</h3>
                     <p>11308 Hwy S62 N<br>Melbourne, IA 50162</p>
                     <p><a href="tel:641-227-3881" class="text-white"><i class="fas fa-phone"></i> 641-227-3881</a></p>
-                    <p><a href="https://facebook.com" target="_blank" class="text-white"><i class="fab fa-facebook"></i>
+                    <p><a href="https://www.facebook.com/meckleysparts/" target="_blank" class="text-white"><i class="fab fa-facebook"></i>
                             Follow us on Facebook</a></p>
                 </div>
                 <div>
