Update homepage: Add Farm Cleanup card and refine Towing text

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="service-card">
                     <div class="service-icon"><i class="fas fa-truck-pickup"></i></div>
                     <h3>Towing & Hauling</h3>
-                    <p>Towing to our shop or yard and heavy equipment hauling across Central Iowa.</p>
+                    <p>Towing to our shop only.</p>
                     <a href="services/towing.html" class="text-primary">Learn more &rarr;</a>
                 </div>
 
@@ -95,6 +95,13 @@
                     <h3>Used & New Parts</h3>
                     <p>Massive inventory of used parts and access to new replacements.</p>
                     <a href="services/parts.html" class="text-primary">Find a part &rarr;</a>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-tractor"></i></div>
+                    <h3>Farm & Acreage Cleanup</h3>
+                    <p>Big or small, we clear out old machinery, scrap metal, and debris across Central Iowa.</p>
+                    <a href="services/scrap.html" class="text-primary">Learn more &rarr;</a>
                 </div>
             </div>
         </div>
