Update Farm Cleanup description on homepage

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="service-card">
                     <div class="service-icon"><i class="fas fa-tractor"></i></div>
                     <h3>Farm & Acreage Cleanup</h3>
-                    <p>Big or small, we clear out old machinery, scrap metal, and debris across Central Iowa.</p>
+                    <p>Big or small, we clear out old vehicles, machinery, and scrap metal across Central Iowa.</p>
                     <a href="services/scrap.html" class="text-primary">Learn more &rarr;</a>
                 </div>
             </div>
