Update Squareville section image

--- a/squareville/index.html
+++ b/squareville/index.html
@@ -80,7 +80,7 @@
                     <a href="../services/parts.html" class="btn btn-primary">Request Squarebody Parts</a>
                 </div>
                 <div class="feature-image">
-                    <img src="../assets/images/squarebody2.jpg" alt="Classic Chevy Truck">
+                    <img src="../assets/images/squareville_white_truck.png" alt="Classic Chevy Truck">
                 </div>
             </div>
         </div>
@@ -104,7 +104,8 @@
                     <h3>Meckley's</h3>
                     <p>11308 Hwy S62 N<br>Melbourne, IA 50162</p>
                     <p><a href="tel:641-227-3881" class="text-white"><i class="fas fa-phone"></i> 641-227-3881</a></p>
-                    <p><a href="https://www.facebook.com/meckleysparts/" target="_blank" class="text-white"><i class="fab fa-facebook"></i>
+                    <p><a href="https://www.facebook.com/meckleysparts/" target="_blank" class="text-white"><i
+                                class="fab fa-facebook"></i>
                             Follow us on Facebook</a></p>
                 </div>
                 <div>
