Remove redundant farm cleanup text from Scrap card

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="service-card">
                     <div class="service-icon"><i class="fas fa-recycle"></i></div>
                     <h3>Scrap & Recycling</h3>
-                    <p>We buy scrap vehicles and metal. Farm and acreage cleanups big or small.</p>
+                    <p>We buy scrap vehicles and metal.</p>
                     <a href="services/scrap.html" class="text-primary">Learn more &rarr;</a>
                 </div>
 
